syntax = "proto3";

package apiextensions;

import "github.com/kralicky/totem/totem.proto";
import "google.golang.org/grpc/health/grpc_health_v1/health.proto";
import "google/protobuf/descriptor.proto";
import "google/protobuf/empty.proto";
import "github.com/rancher/opni/pkg/apis/core/v1/core.proto";

option go_package = "github.com/rancher/opni/pkg/plugins/apis/apiextensions";

service ManagementAPIExtension {
  rpc Descriptors(google.protobuf.Empty) returns (ServiceDescriptorProtoList);
  rpc Authorized(AuthzRequest) returns (AuthzResponse);

  rpc CheckHealth(grpc.health.v1.HealthCheckRequest) returns (grpc.health.v1.HealthCheckResponse);
  rpc WatchHealth(grpc.health.v1.HealthCheckRequest) returns (stream grpc.health.v1.HealthCheckResponse);
}

service HTTPAPIExtension {
  rpc Configure(CertConfig) returns (HTTPAPIExtensionConfig);
}

service StreamAPIExtension {
  rpc ConnectInternal(stream totem.RPC) returns (stream totem.RPC);
}

service UnaryAPIExtension {
  rpc UnaryDescriptor(google.protobuf.Empty) returns (google.protobuf.ServiceDescriptorProto);
}

message CertConfig {
  string ca       = 1;
  bytes  caData   = 2;
  string cert     = 3;
  bytes  certData = 4;
  string key      = 5;
  bytes  keyData  = 6;
  bool   insecure = 7;
}

message HTTPAPIExtensionConfig {
  string             httpAddr = 1;
  repeated RouteInfo routes   = 2;
}

message ServiceDescriptorProtoList {
  repeated google.protobuf.ServiceDescriptorProto items = 1;
}

message RouteInfo {
  string method = 1;
  string path   = 2;
}

message AuthzRequest {
  core.ReferenceList roleList = 1;
  RequestDetails details = 2;
}

message AuthzResponse {
  bool authorized = 1;
}

message RequestDetails {
  string path = 1;
  string verb = 2;
}